// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FreeTextForm tests  rendering active form 1`] = `
<WithStyles(Grid)
<<<<<<< HEAD
  alignContent="flex-end"
  alignItems="flex-end"
  container={true}
  display="row"
  spacing={8}
>
  <WithStyles(Grid)
    item={true}
    xs={true}
=======
  alignItems="center"
  container={true}
  display="row"
  spacing={16}
>
  <WithStyles(Grid)
    item={true}
    style={
      Object {
        "flexGrow": 1,
      }
    }
>>>>>>> master
  >
    <TextField
      disabled={false}
      error={false}
      fullWidth={true}
      helperText={null}
      inputRef={[Function]}
      label="Item name"
      onChange={[Function]}
      onKeyPress={[Function]}
      placeholder="Please type the item name"
      required={false}
      select={false}
      value=""
      variant="standard"
    />
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
<<<<<<< HEAD
    sm="auto"
=======
    sm={2}
>>>>>>> master
    xs={12}
  >
    <WithStyles(Button)
      color="primary"
      disabled={true}
      fullWidth={true}
      onClick={[Function]}
      variant="contained"
    >
      Add
    </WithStyles(Button)>
  </WithStyles(Grid)>
</WithStyles(Grid)>
`;

exports[`FreeTextForm tests  rendering disabled form 1`] = `
<WithStyles(Grid)
<<<<<<< HEAD
  alignContent="flex-end"
  alignItems="flex-end"
  container={true}
  display="row"
  spacing={8}
>
  <WithStyles(Grid)
    item={true}
    xs={true}
=======
  alignItems="center"
  container={true}
  display="row"
  spacing={16}
>
  <WithStyles(Grid)
    item={true}
    style={
      Object {
        "flexGrow": 1,
      }
    }
>>>>>>> master
  >
    <TextField
      disabled={true}
      error={false}
      fullWidth={true}
      helperText={null}
      inputRef={[Function]}
      label="Item name"
      onChange={[Function]}
      onKeyPress={[Function]}
      placeholder="Please type the item name"
      required={false}
      select={false}
      value=""
      variant="standard"
    />
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
<<<<<<< HEAD
    sm="auto"
=======
    sm={2}
>>>>>>> master
    xs={12}
  >
    <WithStyles(Button)
      color="primary"
      disabled={true}
      fullWidth={true}
      onClick={[Function]}
      variant="contained"
    >
      Add
    </WithStyles(Button)>
  </WithStyles(Grid)>
</WithStyles(Grid)>
`;

exports[`FreeTextForm tests  rendering reminder to add input 1`] = `
<WithStyles(Grid)
<<<<<<< HEAD
  alignContent="flex-end"
  alignItems="flex-end"
  container={true}
  display="row"
  spacing={8}
>
  <WithStyles(Grid)
    item={true}
    xs={true}
=======
  alignItems="center"
  container={true}
  display="row"
  spacing={16}
>
  <WithStyles(Grid)
    item={true}
    style={
      Object {
        "flexGrow": 1,
      }
    }
>>>>>>> master
  >
    <TextField
      disabled={false}
      error={false}
      fullWidth={true}
      helperText={null}
      inputRef={[Function]}
      onChange={[Function]}
      onKeyPress={[Function]}
      required={false}
      select={false}
      value="one"
      variant="standard"
    />
    <WithStyles(Typography)
      className=""
      variant="caption"
    >
      reminder text
    </WithStyles(Typography)>
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
<<<<<<< HEAD
    sm="auto"
=======
    sm={2}
>>>>>>> master
    xs={12}
  >
    <WithStyles(Button)
      color="primary"
      disabled={true}
      fullWidth={true}
      onClick={[Function]}
      variant="contained"
    >
      Add
    </WithStyles(Button)>
  </WithStyles(Grid)>
</WithStyles(Grid)>
`;
